# mcu-recorder-server

./: .gitignore  README.md  runMjr.sh
mcu_rec_build/: CMakeCache.txt  MCU_REC  Makefile  cmake_install.cmake
mcu_rec_build/lib/FFmpeg/: Makefile  cmake_install.cmake
mcu_recorder/: CMakeLists.txt  mjr_convertor  mjr_convertor.cpp
mcu_recorder/mjr_convertor.dSYM/Contents/: Info.plist
mcu_recorder/mjr_convertor.dSYM/Contents/Resources/DWARF/: mjr_convertor
mjrs/: us-oregon_dev_UhQUm5ArtG_aaODNx48hd_interview@camera_business_y4q7uAciLl_0_1633352852433-audio.mjr
src/: CMakeLists.txt  main.cpp
